feat: [PIDM-1668] Change param name
